src/objects/ArkusChatterComplianceSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Arkus Chatter Compliance Settings</description>
    <fields>
        <fullName>BatchApexId_Log__c</fullName>
        <label>BatchApexId Log</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterCompliance_Email__c</fullName>
        <description>Enter a valid email address for an already existing compliance email box in order to receive an email for every Chatter post including the person who posted it, the content, date/time stamp, record related to, and any attachments.</description>
        <inlineHelpText>Enter a valid email address for an already existing compliance email box in order to receive an email for every Chatter post including the person who posted it, the content, date/time stamp, record related to, and any attachments.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChatterCompliance_Owner_Name__c</fullName>
        <description>Name of the owner of the chatter compliance records</description>
        <label>ChatterCompliance Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterCompliance_Owner__c</fullName>
        <description>Click the lookup magnifying glass to search for a User or Queue related to the Chatter Compliance Object to own the Chatter Compliance records once they have been created.</description>
        <inlineHelpText>Click the lookup magnifying glass to search for a User or Queue related to the Chatter Compliance Object to own the Chatter Compliance records once they have been created.</inlineHelpText>
        <label>ChatterCompliance Owner</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Compliance_paused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the Chatter Compliance is paused (meaning all triggers will not be executed and no CC records will be created or updated)</description>
        <inlineHelpText>Specifies whether the Chatter Compliance is paused (meaning all triggers will not be executed and no CC records will be created or updated)</inlineHelpText>
        <label>Chatter Compliance paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteFeedItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make this checkbox true in order to delete the original Chatter post on the same schedule as the above setting for deleting the Chatter Compliance records.</description>
        <inlineHelpText>Make this checkbox true in order to delete the original Chatter post on the same schedule as the above setting for deleting the Chatter Compliance records.</inlineHelpText>
        <label>DeleteFeedItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_original_content_schedule_job_id__c</fullName>
        <label>Delete original posts schedule job id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_NOT_create_the_chatter_compliance_rec__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow for an administrator to NOT create the Chatter Compliance record and ONLY send an email to the external Email Address that is setup for compliance via the settings screen.</description>
        <inlineHelpText>Allow for an administrator to NOT create the Chatter Compliance record and ONLY send an email to the external Email Address that is setup for compliance via the settings screen.</inlineHelpText>
        <label>Do NOT create the chatter compliance rec</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_keep_any_attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow for an administrator to select to NOT keep any attachments that are added to a Chatter Post.</description>
        <inlineHelpText>Allow for an administrator to select to NOT keep any attachments that are added to a Chatter Post.</inlineHelpText>
        <label>Do not keep any attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_to_show_on_error__c</fullName>
        <description>Set the error message that the user sees when they try to use one of the blocked words.</description>
        <inlineHelpText>Set the error message that the user sees when they try to use one of the blocked words.</inlineHelpText>
        <label>Message to show on error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrivateMessagesJobID__c</fullName>
        <description>The ID of the Job to create Compliances for Private Messages.</description>
        <inlineHelpText>The ID of the Job to create Compliances for Private Messages.</inlineHelpText>
        <label>Private Messages Job ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivateMessagesJobPeriodicity__c</fullName>
        <defaultValue>&quot;EVERY DAY&quot;</defaultValue>
        <description>The periodicity of the schedule job that creates Compliances for every Chatter private message.</description>
        <inlineHelpText>The periodicity of the schedule job that creates Compliances for every Chatter private message.</inlineHelpText>
        <label>Private Messages Job Periodicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleJobId_Log__c</fullName>
        <label>ScheduleJobId Log</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Job_Id__c</fullName>
        <description>Id of the scheduled job to delete Chatter Compliance records.</description>
        <inlineHelpText>Id of the scheduled job to delete Chatter Compliance records.</inlineHelpText>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_email_if_banned_word_error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the word blocker is configured to show an error message when a banned word is posted or commented and this box is checked, then a notification email will be sent to the system administrator.</description>
        <inlineHelpText>If the word blocker is configured to show an error message when a banned word is posted or commented and this box is checked, then a notification email will be sent to the system administrator.</inlineHelpText>
        <label>Send email if banned word error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email_if_showing_banned_words__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked, an email notification is sent when a &apos;banned&apos; word is posted.</description>
        <inlineHelpText>When this box is checked, an email notification is sent when a &apos;banned&apos; word is posted.</inlineHelpText>
        <label>Send email if showing banned words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email_if_substituting_words__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the word blocker is configure to substitute banned words and this box is checked then an email will be sent to the system administrator notifying of the change.</description>
        <inlineHelpText>If the word blocker is configure to substitute banned words and this box is checked then an email will be sent to the system administrator notifying of the change.</inlineHelpText>
        <label>Send email if substituting words</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_EVERY_word_on_word_blocker__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set, the word blocker is disabled, therefore the user can post comments without word filtering.</description>
        <inlineHelpText>If set, the word filtering for post and comments gets disabled.</inlineHelpText>
        <label>Word Blocker - Show EVERY word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substitute_bad_words_for_characters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>While posting a feed or comment if a banned word is detected, then substitute that word for a set of characters.</description>
        <inlineHelpText>If checked,  when a banned word is detected while posting a feed or comment, then substitute that word for a set of characters.</inlineHelpText>
        <label>Word Blocker - Replace words with chars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_to_delete__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Enter the number of days to retain Compliance Chatter records.</description>
        <inlineHelpText>Enter the number of days to retain Compliance Chatter records.</inlineHelpText>
        <label>Time to delete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_delete_original_records__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Enter the number of days to retain Chatter activity.</description>
        <inlineHelpText>Enter the number of days to retain Chatter activity.</inlineHelpText>
        <label>Time to delete original records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WordBlocker_ShowAnErrorMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to show an error message when posting banned words</description>
        <inlineHelpText>Option to show an error message when posting banned words</inlineHelpText>
        <label>Word Blocker - Show an error message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>delete_post_content_information_job__c</fullName>
        <description>The Id for the schedule job that erases post content information up to a specified date.</description>
        <inlineHelpText>The Id for the schedule job that erases post content information.</inlineHelpText>
        <label>delete post content information job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selectedEmailSubject__c</fullName>
        <description>Allow for an administrator to set the subject line of the email alerts that get sent to the Compliance Email box via the Settings screen.</description>
        <inlineHelpText>Allow for an administrator to set the subject line of the email alerts that get sent to the Compliance Email box via the Settings screen.</inlineHelpText>
        <label>Email subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ArkusChatterComplianceSettings</label>
</CustomObject>